[package]
name = "rustbus"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-web-actors = "4.3"
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
rust-sv = { git = "https://github.com/brentongunning/rust-sv", branch = "master" }
log = "0.4"
env_logger = "0.11"
async-std = "1.13"
uuid = { version = "1.10", features = ["v4"] }
dashmap = "6.0"
regex = "1.10"
zmq = "0.10"
backoff = { version = "0.4", features = ["tokio"] }
prometheus = { version = "0.13", features = ["process"] }
dotenvy = "0.15"
lazy_static = "1.5"
async-graphql = "7.0"
async-graphql-actix-web = "7.0"
