[package]
name = "rustbus"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.11.0", default-features = false, features = ["macros", "compress-gzip"] }
actix-web-actors = "4.3.1"
tokio = { version = "1.45.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rayon = "1.10.0"
sv = { git = "https://github.com/murphsicles/rust-sv", branch = "master" }
log = "0.4.27"
env_logger = "0.11.8"
async-std = "1.13.1"
uuid = { version = "1.17.0", features = ["v4"] }
dashmap = "6.1.0"
regex = "1.11.1"
zmq = "0.10.0"
backoff = { version = "0.4.0", features = ["tokio"] }
prometheus = "0.14.0"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
async-graphql = "7.0.17"
async-graphql-actix-web = "7.0.17"
