[package]
name = "rustbus"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = { version = "4.11.0", default-features = false, features = ["macros", "compress-gzip"] }
actix-web-actors = "4.3.1"
async-graphql = "7.0.17"
async-graphql-actix-web = "7.0.17"
async-std = "1.13.1"
backoff = { version = "0.4.0", features = ["tokio"] }
bitcoinsv-rpc = "1.0.3"
bitcoinsv = "0.3.3"
bytes = "1.7.2"
dashmap = "6.1.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.27"
prometheus = "0.14.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres"] }
sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.4.0" }
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
zmq = "0.10.0"
